k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: f6sny-next-frontend
  namespace: f6sny
spec:
  selector:
    app: f6sny-next-frontend
    component: frontend
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
