k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: f6sny-next-frontend-ingress
  namespace: f6sny
  annotations:
    cert-manager.io/cluster-issuer: http01-clusterissuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - beta.f6sny.com
      secretName: f6sny-next-frontend-tls
  rules:
  - host: beta.f6sny.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: f6sny-next-frontend
              port:
                number: 3000
